# LinuxTracepoints-Rust

./: .gitattributes  .gitignore  Cargo.toml  README.md  SUPPORT.md
.github/workflows/: Rust.yml
eventheader/: Cargo.toml  README.md
eventheader/examples/: generate_events.rs
eventheader/src/: _internal.rs  changelog.rs  descriptors.rs  enums.rs  guid.rs  lib.rs  native.rs  provider.rs
eventheader/tests/: tests.rs
eventheader_decode/: Cargo.toml
eventheader_decode/examples/: benchmark.rs
eventheader_decode/src/: _internal.rs  changelog.rs  charconv.rs  enumerator.rs  filters.rs  lib.rs  perf_item.rs  reader.rs  writers.rs
eventheader_decode/tests/: enumerate.rs  namechars.rs
eventheader_dynamic/: Cargo.toml  README.md
eventheader_dynamic/examples/: sample.rs
eventheader_dynamic/src/: builder.rs  changelog.rs  lib.rs  provider.rs
eventheader_dynamic/tests/: tests.rs
eventheader_macros/: Cargo.toml  README.md
eventheader_macros/examples/: print_field_options.rs
eventheader_macros/src/: enabled_generator.rs  enabled_info.rs  enums.rs  event_generator.rs  event_info.rs  expression.rs  field_info.rs  field_option.rs  field_options.rs  ident_builder.rs  lib.rs  parser.rs  provider_generator.rs  provider_info.rs  strings.rs  tree.rs
eventheader_types/: Cargo.toml  README.md
eventheader_types/src/: changelog.rs  descriptors.rs  enums.rs  guid.rs  lib.rs
eventheader_types/tests/: tests.rs
tracepoint/: Cargo.toml  README.md
tracepoint/src/: changelog.rs  descriptors.rs  lib.rs  native.rs
tracepoint_decode/: Cargo.toml  README.md
tracepoint_decode/examples/: benchmark.rs  decode_dat.rs
tracepoint_decode/expected/: enumerate_movenextsibling.json  enumerate_writeitem.json
tracepoint_decode/src/: _internal.rs  byte_reader.rs  changelog.rs  charconv.rs  display.rs  enumerator.rs  filters.rs  lib.rs  perf_abi.rs  perf_event_data.rs  perf_event_desc.rs  perf_event_format.rs  perf_field_format.rs  perf_format.rs  perf_item.rs  perf_session.rs  writers.rs
tracepoint_decode/tests/: enumerate.rs  format_file.rs
tracepoint_perf/: Cargo.toml  README.md
tracepoint_perf/examples/: decode_perf.rs  decode_perf_to_json.rs  rewrite_perf.rs
tracepoint_perf/src/: changelog.rs  file_abi.rs  file_reader.rs  file_writer.rs  header_index.rs  input_file.rs  lib.rs  output_file.rs
