[package]
name = "eventheader"
version = "0.4.1"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust API for eventheader-encoded Linux Tracepoints via user_events"
keywords = [
    "user_events",
    "eventheader",
    "tracepoints",
    "trace",
    "logging",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
    "os::linux-apis",
]
repository = "https://github.com/microsoft/LinuxTracepoints-Rust"
readme = "README.md"
rust-version = "1.63"

[features]
default = ["user_events", "macros"]
user_events = ["tracepoint/user_events"] # Logging is enabled if linux && user_events.
macros = ["dep:eventheader_macros"]

[dependencies]
tracepoint = { default-features = false, version = "= 0.4.0", path = "../tracepoint" }
eventheader_types = { version = "= 0.4.1", path = "../eventheader_types" }
eventheader_macros = { optional = true, version = "= 0.3.0", path = "../eventheader_macros" }

[dev-dependencies]
uuid  = ">= 1.1"
