[package]
name = "eventheader_types"
version = "0.4.1"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust types for eventheader-encoded Linux Tracepoints via user_events"
keywords = [
    "user_events",
    "eventheader",
    "tracepoints",
    "trace",
    "logging",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
    "os::linux-apis",
]
repository = "https://github.com/microsoft/LinuxTracepoints-Rust"
readme = "README.md"
rust-version = "1.64"

[dependencies]

[dev-dependencies]
uuid  = ">= 1.1"
