[package]
name = "tracepoint"
version = "0.5.0"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust API for Linux Tracepoints via user_events"
keywords = [
    "user_events",
    "tracepoints",
    "trace",
    "logging",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
    "os::linux-apis",
]
repository = "https://github.com/microsoft/LinuxTracepoints-Rust"
readme = "README.md"
rust-version = "1.64"

[features]
default = ["user_events"]
user_events = [] # Logging is enabled if linux && user_events.

[target.'cfg(target_os = "linux")'.dependencies]
libc = { default-features = false, version = "0.2" }
