[package]
name = "tracepoint_decode"
version = "0.4.1"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust API for decoding tracepoints"
keywords = [
    "user_events",
    "eventheader",
    "tracepoints",
    "trace",
    "logging",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
    "no-std",
]
repository = "https://github.com/microsoft/LinuxTracepoints-Rust"
readme = "README.md"
rust-version = "1.64"

[features]
default = ["rustc_1_77"]

# features that require rustc 1.77:
# Support for Ipv4Addr and Ipv6Addr in core.
rustc_1_77 = []

[dependencies]
eventheader_types = { version = "= 0.4.1", path = "../eventheader_types" }

[dev-dependencies]
zip = ">= 2.1"

[target."cfg(unix)".dependencies]
# Uses libc::gmtime_r when converting time64 to string.
libc = { default-features = false, version = "0.2" }
