[package]
name = "tracepoint_perf"
version = "0.5.0"
edition = "2021"
authors = ["Microsoft"]
license = "MIT"
description = "Rust API for reading and writing perf.data files"
keywords = [
    "user_events",
    "eventheader",
    "tracepoints",
    "trace",
    "logging",
]
categories = [
    "api-bindings",
    "development-tools::debugging",
    "development-tools::profiling",
]
repository = "https://github.com/microsoft/LinuxTracepoints-Rust"
readme = "README.md"
rust-version = "1.64"

[dependencies]
eventheader_types = { version = "= 0.5.0", path = "../eventheader_types" }
tracepoint_decode = { version = "= 0.5.0", path = "../tracepoint_decode" }
